--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Seriados Nostalgia</h1>
+        <h1>Seriados Nostálgicos</h1>
     </header>
     <main>
         <section>
@@ -22,7 +22,8 @@
         </section>
     </main>
     <footer >
-        <p>2024 - Seriados Nostalgia. Site criado por <strong>Cristiane Rangell</strong>.</p>
+        <p>2024 - Seriados Nostálgicos.</p>
+        <p> Site criado por <strong>Cristiane Rangell</strong>.</p>
     </footer>
     
     <script src="dados.js"></script>
