Atualização de bug na pagina

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
     </main>
     <footer >
-        <p>2024 - Seriados Nostálgicos. Site criado por <a href="https://github.com/crisrangell" target="_blank" class="site"><strong>Cristiane Rangel</strong></a>.</p>
+        <p>2024 - Seriados Nostálgicos.</p>
+        <p> Site criado por <a href="https://github.com/crisrangell" target="_blank" class="site"><strong>Cristiane Rangel</strong></a>.</p>
     </footer>
     
     <script src="dados.js"></script>
